	PR ld/10515 	* linker.c (bfd_find_version_for_sym): Override a "*" match by any 	other wildcard match.  Warn on multiple wildcard matches.